# freight-flow-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/worflows/: ci.yml
.github/workflows/: ci.yml
airflow/dags/: freight_pipeline.py
dbt/freight_flow/: .user.yml  dbt_project.yml  profiles.yml
dbt/freight_flow/models/marts/: fct_commodity_trends.sql  fct_corridor_flows.sql  fct_disruption_indicators.sql  fct_mode_share.sql  fct_trade_corridor_scorecard.sql  schema.yml
dbt/freight_flow/models/staging/: schema.yml  stg_faf_shipments.sql  stg_faf_shipments_long.sql  stg_supply_chain_indicators.sql  stg_transborder_freight.sql
dbt/freight_flow/seeds/: dim_commodities.csv  dim_regions.csv  dim_transport_modes.csv
docs/: architecture.md  data-directory.md
grafana/dashboards/: dashboard.yml  freight_intelligence.json
grafana/datasources/: postgres.yaml  postgres.yml
init-db/: 01_create_schemas.sql  02_create_raw_tables.sql
src/ingestion/: base.py  bronze_loader.py  faf_ingestor.py  indicators.py  transborder_ingestor.py
src/init-db/: 02_create_raw_tables.sql  03_create_indexes.sql
src/quality/: bronze_silver_checkpoint.py  silver_gold_checkpoint.py
src/utils/: manifest.py  s3_client.py
