[project]
name = "freight-flow-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.42.97",
    "dbt-core>=1.10.22",
    "dbt-postgres>=1.9.1",
    "great-expectations>=1.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.13",
]
